--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <div style="text-align:center">
   <h1>Hi there!</h1>
+  <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" />
 </div>
 
 </body>
